# DepthNet

./: .gitignore  README.md
NaN_checker/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  nan  nan.cpp
SUN3D/matlab/: SUN3Dflow.m
SUN3D/src/: CMakeLists.txt  list.txt  sun3d_reader.cpp
tfCNN/: .gitignore
tfCNN/data_processing/: ConvertDataset.py  list_test.txt  list_train.txt  vis_data.ipynb
tfCNN/data_processing/.ipynb_checkpoints/: preprocess data-checkpoint.ipynb
tfCNN/data_processing/examples/: list_test.txt  list_train.txt
tfCNN/data_processing/tools/: makeTFrecords.py  parser.py
tfCNN/layers/: activations.py  batchnorm.py  conv.py  deconv.py  evalfunct.py  losses.py
tfCNN/multi_gpu/: .eval.py.kate-swp  eval.py  model.py  param.py  train.py
tfCNN/one_gpu/: data.py  eval.py  model.py  param.py  run.sh  train.py
